[package]
name = "rust_app_locker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.4"
sixtyfps = '0.1.4'
#gtk = { version = "0.3.1", package = "gtk4" }

[build-dependencies]
sixtyfps-build = "0.1.4"